--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>camel-http-starter</artifactId>
             <version>3.14.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
